test/testData/parser/negative/incorrectStatements.c


int foo(int a) {

  if (a) else x;

  for () {
      else ;
  }

}



int gar(int a) {
  return (int else)a;
}
